<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_parent_layout"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_margin="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/address_frame"
        android:background="@drawable/address_textview_border_unselected">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/address_frame_selected_tick"
            android:visibility="invisible"
            android:background="@drawable/ic_tick"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:gravity="start">

            <TextView
                android:id="@+id/address_frame_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nowsad"
                android:textSize="@dimen/font_s"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_address_mobile_no_text"
                    android:layout_marginEnd="2dp"
                    android:textSize="@dimen/font_s"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/address_frame_user_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_s"
                    android:text="01654535204"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <TextView
                android:id="@+id/address_frame_user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="17/1 Shantinagar Shantinagar Road, Dhaka "
                android:ellipsize="end"
                android:maxLines="4"
                android:textSize="@dimen/font_s"
                android:textColor="@color/text_hint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/address_frame_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/remove_text"
                android:textSize="@dimen/font_s"
                android:drawableStart="@drawable/ic_dustbin"
                android:drawablePadding="2dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/text_hint"/>

            <TextView
                android:id="@+id/address_frame_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/cart_edit_text"
                android:textSize="@dimen/font_s"
                android:drawableStart="@drawable/ic_dustbin"
                android:drawablePadding="2dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/text_hint"/>

        </LinearLayout>

    </FrameLayout>


    </androidx.cardview.widget.CardView>
